--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "better-scroll": "^2.3.1",
     "core-js": "^3.6.5",
     "echarts": "^5.1.1",
+    "jquery": "^3.6.0",
     "lib-flexible": "^0.3.2",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1"
